[gd_scene load_steps=31 format=3 uid="uid://cd0y5ipvcb8by"]

[ext_resource type="Script" path="res://playerPhys.gd" id="1_o52d6"]
[ext_resource type="Texture2D" uid="uid://bop7wkbcrwepc" path="res://Sprites/Characters/3 Cyborg/Cyborg_death.png" id="1_ty2ic"]
[ext_resource type="PackedScene" uid="uid://ck3r8wgj1vmsy" path="res://Gun.tscn" id="2_1l1vd"]
[ext_resource type="Texture2D" uid="uid://ccrj25t0c31w8" path="res://Sprites/Characters/3 Cyborg/Cyborg_idle.png" id="2_7ifvg"]
[ext_resource type="Texture2D" uid="uid://dtbnq5bvgq4wx" path="res://Sprites/Characters/3 Cyborg/Cyborg_jump.png" id="3_kwts0"]
[ext_resource type="Texture2D" uid="uid://bdgrkckide8en" path="res://Sprites/Characters/3 Cyborg/Cyborg_run.png" id="4_jkkxk"]
[ext_resource type="Script" path="res://PauseMenu.gd" id="6_exxc0"]
[ext_resource type="Script" path="res://elementAbility.gd" id="8_8gw26"]
[ext_resource type="Script" path="res://elementAbility.gd" id="8_8gw26"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8ek6"]
size = Vector2(12.0795, 19.8667)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry33n"]
atlas = ExtResource("1_ty2ic")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iya1"]
atlas = ExtResource("1_ty2ic")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kixm1"]
atlas = ExtResource("1_ty2ic")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hyq8"]
atlas = ExtResource("1_ty2ic")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5vq2"]
atlas = ExtResource("1_ty2ic")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s10n7"]
atlas = ExtResource("1_ty2ic")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i81p8"]
atlas = ExtResource("2_7ifvg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ladbu"]
atlas = ExtResource("2_7ifvg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uicqp"]
atlas = ExtResource("2_7ifvg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yga5i"]
atlas = ExtResource("2_7ifvg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkcm0"]
atlas = ExtResource("3_kwts0")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1ah8"]
atlas = ExtResource("3_kwts0")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r74cp"]
atlas = ExtResource("3_kwts0")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dso0w"]
atlas = ExtResource("3_kwts0")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_68jyf"]
atlas = ExtResource("4_jkkxk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m24qi"]
atlas = ExtResource("4_jkkxk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wth65"]
atlas = ExtResource("4_jkkxk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifsl5"]
atlas = ExtResource("4_jkkxk")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pumdq"]
atlas = ExtResource("4_jkkxk")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pbam"]
atlas = ExtResource("4_jkkxk")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_w77ce"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry33n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iya1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kixm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hyq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5vq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s10n7")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i81p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ladbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uicqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yga5i")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkcm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1ah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r74cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dso0w")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68jyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m24qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wth65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifsl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pumdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pbam")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.1, 0.1)
script = ExtResource("1_o52d6")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = -1840.0
offset_right = 100.0
offset_bottom = -1800.0
scale = Vector2(0.776387, 0.776387)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6_exxc0")

[node name="Control" type="Control" parent="PauseMenu"]
process_mode = 2
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResumeButton" type="Button" parent="PauseMenu/Control"]
layout_mode = 0
offset_left = -800.0
offset_top = -730.0
offset_right = -730.0
offset_bottom = -699.0
scale = Vector2(20.0709, 20.0709)
text = "Resume"

[node name="ExitButton" type="Button" parent="PauseMenu/Control"]
layout_mode = 0
offset_left = -500.0
offset_top = 700.0
offset_right = -463.0
offset_bottom = 731.0
scale = Vector2(21.1383, 21.1383)
text = "Exit"

[node name="HomeButton" type="Button" parent="PauseMenu/Control"]
layout_mode = 0
offset_left = -710.0
offset_top = -20.0002
offset_right = -655.0
offset_bottom = 10.9998
scale = Vector2(21.9468, 21.9468)
text = "Home"

[node name="Gun" parent="." instance=ExtResource("2_1l1vd")]
position = Vector2(310, -40)
scale = Vector2(17.5541, 17.5541)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-415, 255)
scale = Vector2(65.4, 75)
shape = SubResource("RectangleShape2D_h8ek6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(70, 0)
scale = Vector2(41.5105, 41.5105)
sprite_frames = SubResource("SpriteFrames_w77ce")
animation = &"Run"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ElementAbility" type="Node" parent="."]
script = ExtResource("8_8gw26")
[node name="ElementAbility" type="Node" parent="."]
script = ExtResource("8_8gw26")

[node name="CooldownTimer" type="Timer" parent="ElementAbility"]
one_shot = true

[connection signal="timeout" from="ElementAbility/CooldownTimer" to="ElementAbility" method="_on_timer_timeout"]
[connection signal="timeout" from="ElementAbility/CooldownTimer" to="ElementAbility" method="_on_timer_timeout"]
